--- a/src/OrderProcessing.Api/appsettings.json
+++ b/src/OrderProcessing.Api/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=EcommerceDB;Username=ecommerce;Password=ecommerce123"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "admin",
+    "Password": "admin123",
+    "ExchangeName": "order-created-exchange"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
