--- a/src/OrderProcessing.Infrastructure/OrderProcessing.Infrastructure.csproj
+++ b/src/OrderProcessing.Infrastructure/OrderProcessing.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+      <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
     </ItemGroup>
 
     <ItemGroup>
